--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+
+# Virtual environment
+env/
+
+secrets.py
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -59,7 +65,9 @@ coverage.xml
 *.log
 local_settings.py
 db.sqlite3
+testdb.sqlite3
 db.sqlite3-journal
+*.sqlite3
 
 # Flask stuff:
 instance/
